# midnight

./: Cargo.toml
game/: Cargo.toml
game/src/: error.rs  gamerunner.rs  gamestate.rs  main.rs  roles.rs
game/src/kafka/: mod.rs  service.rs  topic.rs
game/src/roles/: mod.rs
game/src/roles/seer/: mod.rs  seer.json
game/src/roles/spy/: mod.rs  spy.json
game/src/roles/werewolf/: mod.rs  werewolf.json
game/src/roles/witch/: mod.rs  sabotage.json
game/src/roles/workflows/: werewolf.json  witch.json
game/src/workflow/: manager.rs  mod.rs  server_action.rs  service.rs
