[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.41"
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.9.1"
rand_chacha = "0.9.0"
rdkafka = "0.38.0"
serde = "1.0.219"
serde_json = "1.0.140"
specta = "1.0.5"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
ulid = "1.2.1"
